--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
-
-    <title>Memory Card Game</title>
-</head>
-<body>
-    <h1>Memory Card</h1>
-
-    <nav>Instructions 
-       Game
-    </nav>
-    <h1>Instructions</h1>
-
-   <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The objective of the game is to turn over pairs of matching cards.  </p>
-
-
-   <div>
+        <head>
+                <title>Memory Game</title>
+                <link href="https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet">
+                <link href="css/style.css" rel="stylesheet" type="text/css">
+            </head>
+            <body>
+                <header>
+                    <h1>Memory Game</h1>
+                </header>
+                <nav><a href="#instructions">Instructions</a> <a href="#game-board">Game</a></nav>
+                <main>
+                    <h2 id="instructions">Instructions</h2>
+                    <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+                    <div id="game-board" class ="board clearfix">
     <img src="images/back.png" alt="Queen of Diamonds">
     <img src="images/back.png" alt="Queen of Hearts">
     <img src="images/back.png" alt="King of Diamonds">
     <img src="images/back.png" alt="King of Hearts">
-    </div>
+                    </div>
+
+                </main>
+                <footer class="clearfix">
+                    <p class="copyright">Copyright 2017</p>
+                    <p class="message">Created with &hearts; by <span class="name">GA</span></p>
+                </footer>
+                <script src="js/main.js"></script>
 </body>
 </html>
